A simpler way to manage intl errors
Remove mention of the intl library from build.xml, which means we no
longer have to create a fake, empty intl library.

--- a/build.xml
+++ b/build.xml
@@ -56,7 +56,7 @@
         <property name="cxxtest.symreader.dir"
           value="${cxxtest.dir}${file.separator}bfd"/>
         <property name="cxxtest.extra.libs"
-          value=",bfd,iberty,intl"/>
+          value=",bfd,iberty"/>
     </target>
 
     <!-- Build OS-specific binary files, if necessary -->
